--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="iconFont/iconfont.css">
+    <link rel="stylesheet" href="headerimg/logo.jpg">
     <title>React App</title>
   </head>
   <body>
